--- a/info_ad/main_admin/scan/index.html
+++ b/info_ad/main_admin/scan/index.html
@@ -4,9 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>สแกน QR ลูกค้า</title>
-  <link rel="stylesheet" href="style.css" />
+
+  <!-- SweetAlert และ QR Code -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://unpkg.com/html5-qrcode"></script>
+
+  <!-- ✅ LIFF SDK ก่อน script.js -->
+  <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+  <script src="script.js"></script>
+
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div id="adminInfo" class="admin-info">
@@ -15,9 +22,9 @@
 
   <h2>📷 สแกน QR Code ลูกค้า</h2>
   <div id="reader" style="width: 300px;"></div>
+  <p id="scanHint" style="color:gray;">กรุณาเล็งกล้องไปยัง QR Code ลูกค้า</p>
   <button id="openCameraBtn" onclick="startCamera()">เปิดกล้อง</button>
-  <p id="scanHint" style="color:gray;">📡 กรุณาเล็งกล้องไปยัง QR Code ลูกค้า</p>
-
+  
   <hr />
 
   <div>
