--- a/info_ad/main_admin/scan/index.html
+++ b/info_ad/main_admin/scan/index.html
@@ -24,6 +24,7 @@
   <div id="reader" style="width: 300px;"></div>
   <p id="scanHint" style="color:gray;">กรุณาเล็งกล้องไปยัง QR Code ลูกค้า</p>
   <button id="openCameraBtn" onclick="startCamera()">เปิดกล้อง</button>
+  <button id="toggleCameraBtn" onclick="toggleCamera()">🔁 สลับกล้อง</button>
   
   <hr />
 
