--- a/info_ad/main_admin/scan/index.html
+++ b/info_ad/main_admin/scan/index.html
@@ -1,58 +1,197 @@
-<!DOCTYPE html>
-<html lang="th">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>สแกน QR ลูกค้า</title>
+// ✅ ปรับปรุง script.js ตามคำขอล่าสุดของผู้ใช้
+const GAS_ENDPOINT = 'https://script.google.com/macros/s/AKfycbxdxUvmwLS3_nETwGLk4J8ipPq2LYNSWyhJ2ZwVsEJQgONG11NSSX3jVaeqWCU1TXvE5g/exec';
+const liffId = '2007421084-2OgzWbpV';
+const pointPerBaht = 0.1;
 
-  <!-- SweetAlert และ QR Code -->
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="https://unpkg.com/html5-qrcode"></script>
+let adminUserId = '';
+let foundUser = null;
+let serviceList = [];
 
-  <!-- ✅ LIFF SDK ก่อน script.js -->
-  <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
-  <script src="script.js"></script>
+let currentCameraIndex = 0;
+let html5QrCode;
+let cameraList = [];
 
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <div id="adminInfo" class="admin-info">
-    👤 <span id="adminName">...</span> | 🛡️ <span id="adminRole">-</span>
-  </div>
+// ✅ โหลด LIFF และดึงโปรไฟล์
+window.addEventListener('DOMContentLoaded', async () => {
+  await liff.init({ liffId });
+  if (!liff.isLoggedIn()) return liff.login();
 
-  <h2>📷 สแกน QR Code ลูกค้า</h2>
-  <div id="reader" style="width: 300px;"></div>
-  <p id="scanHint" style="color:gray;">กรุณาเล็งกล้องไปยัง QR Code ลูกค้า</p>
-  <button id="openCameraBtn" onclick="startCamera()">เปิดกล้อง</button>
-  <button id="toggleCameraBtn" onclick="toggleCamera()">🔁 สลับกล้อง</button>
-  
-  <hr />
+  const profile = await liff.getProfile();
+  adminUserId = profile.userId;
 
-  <div>
-    <label>หรือกรอกเบอร์โทรลูกค้า:</label><br />
-    <input type="tel" id="manualPhone" placeholder="กรอกเบอร์โทร..." />
-    <button onclick="manualSearch()">ตรวจสอบ</button>
-  </div>
+  const res = await fetch(`${GAS_ENDPOINT}?action=check_admin&userId=${adminUserId}`);
+  const result = await res.json();
 
-  <div id="resultSection" class="hidden">
-    <h3>ข้อมูลลูกค้า</h3>
-    <p>ชื่อ: <span id="custName"></span></p>
-    <p>เบอร์: <span id="custPhone"></span></p>
-    <p>รถ: <span id="custCar"></span></p>
+  document.getElementById('adminName').textContent = result.name || '-';
+  document.getElementById('adminRole').textContent = `ระดับ ${result.level || '-'}`;
 
-    <label>บริการ:</label>
-    <select id="serviceSelect" onchange="updatePoint()"></select>
+  logAction('enter_scan', 'เข้าสู่หน้า Scan');
+  loadServices();
+  startCamera();
+});
 
-    <label>ราคา:</label>
-    <input type="number" id="priceInput" readonly />
+function logAction(title, detail) {
+  fetch(GAS_ENDPOINT, {
+    method: 'POST',
+    body: JSON.stringify({
+      action: 'log_admin',
+      contents: JSON.stringify({
+        name: document.getElementById('adminName').textContent,
+        userId: adminUserId,
+        actionTitle: title,
+        detail,
+        device: navigator.userAgent,
+        token: '',
+      }),
+    }),
+  });
+}
 
-    <p>แต้มที่จะได้: <span id="pointPreview">0</span></p>
+function startCamera() {
+  html5QrCode = new Html5Qrcode('reader');
+  Html5Qrcode.getCameras().then(cameras => {
+    if (cameras.length) {
+      cameraList = cameras;
+      const backCam = cameras.find(cam => /back|environment/i.test(cam.label));
+      const camId = backCam ? backCam.id : cameras[0].id;
+      currentCameraIndex = cameras.findIndex(cam => cam.id === camId);
 
-    <label>หมายเหตุ:</label>
-    <input type="text" id="noteInput" />
+      html5QrCode.start(
+        camId,
+        { fps: 10, qrbox: 250 },
+        (decodedText) => {
+          onScanSuccess(decodedText);
+          html5QrCode.stop();
+        },
+        () => {}
+      );
+    } else {
+      Swal.fire('ไม่พบกล้อง', '', 'error');
+    }
+  });
+}
 
-    <button id="submitBtn" onclick="submitService()">บันทึกบริการ</button>
-  </div>
+function toggleCamera() {
+  if (!cameraList.length || !html5QrCode) return;
+  html5QrCode.stop().then(() => {
+    currentCameraIndex = (currentCameraIndex + 1) % cameraList.length;
+    html5QrCode.start(
+      cameraList[currentCameraIndex].id,
+      { fps: 10, qrbox: 250 },
+      (decodedText) => {
+        onScanSuccess(decodedText);
+        html5QrCode.stop();
+      },
+      () => {}
+    );
+  });
+}
 
-</body>
-</html>
+async function manualSearch() {
+  const phone = document.getElementById('manualPhone').value;
+  if (!phone) return;
+
+  const res = await fetch(`${GAS_ENDPOINT}?action=search_phone&phone=${phone}`);
+  const result = await res.json();
+  if (!result.success) return Swal.fire('ไม่พบข้อมูลลูกค้า', '', 'error');
+  foundUser = result.data;
+  showCustomerPopup();
+}
+
+async function onScanSuccess(token) {
+  const res = await fetch(`${GAS_ENDPOINT}?action=verify_token&token=${token}`);
+  const result = await res.json();
+  if (!result.success) return Swal.fire('QR ไม่ถูกต้อง', '', 'error');
+  foundUser = result.data;
+  showCustomerPopup();
+}
+
+function loadServices() {
+  fetch(`${GAS_ENDPOINT}?action=service_list`)
+    .then(res => res.json())
+    .then(data => {
+      serviceList = data;
+      const datalist = document.createElement('datalist');
+      datalist.id = 'serviceOptions';
+      data.forEach(item => {
+        const opt = document.createElement('option');
+        opt.value = item.name;
+        datalist.appendChild(opt);
+      });
+      document.body.appendChild(datalist);
+    });
+}
+
+function showCustomerPopup() {
+  Swal.fire({
+    title: 'ข้อมูลลูกค้า',
+    html: `
+      <p>ชื่อ: ${foundUser.Name}</p>
+      <p>เบอร์: ${foundUser.Phone}</p>
+      <p>รถ: ${foundUser.Brand} ${foundUser.Model} ${foundUser.Year}</p>
+      <input list="serviceOptions" id="serviceName" placeholder="ชื่อบริการ" class="swal2-input">
+      <input type="number" id="priceInput" placeholder="ราคา" class="swal2-input">
+      <p>แต้มที่จะได้: <span id="pointPreview">0</span></p>
+      <input type="text" id="noteInput" placeholder="หมายเหตุ" class="swal2-input">
+    `,
+    confirmButtonText: 'บันทึก',
+    didOpen: () => {
+      const priceInput = document.getElementById('priceInput');
+      const pointPreview = document.getElementById('pointPreview');
+      priceInput.addEventListener('input', () => {
+        const p = parseFloat(priceInput.value) || 0;
+        pointPreview.textContent = Math.floor(p * pointPerBaht);
+      });
+    },
+    preConfirm: async () => {
+      const name = document.getElementById('serviceName').value.trim();
+      const price = parseFloat(document.getElementById('priceInput').value) || 0;
+      const note = document.getElementById('noteInput').value.trim();
+      if (!name || price <= 0) return Swal.showValidationMessage('กรุณากรอกชื่อบริการและราคาถูกต้อง');
+
+      const existing = serviceList.find(s => s.name === name);
+      if (!existing || existing.price != price) {
+        await fetch(GAS_ENDPOINT, {
+          method: 'POST',
+          body: JSON.stringify({
+            action: 'service',
+            contents: JSON.stringify({
+              action: 'add_service',
+              name,
+              price,
+              point: Math.floor(price * pointPerBaht),
+              detail: '-',
+              createdBy: adminUserId
+            })
+          })
+        });
+      }
+
+      const record = {
+        action: 'record_service',
+        contents: JSON.stringify({
+          userId: foundUser.UserID,
+          nameLine: foundUser.nameLine || '',
+          brand: foundUser.Brand,
+          model: foundUser.Model,
+          serviceName: name,
+          price: price,
+          point: Math.floor(price * pointPerBaht),
+          note: note,
+          timestamp: new Date().toISOString(),
+          admin: document.getElementById('adminName').textContent
+        })
+      };
+
+      Swal.fire({ title: '⏳ กำลังบันทึก...', allowOutsideClick: false, didOpen: () => Swal.showLoading() });
+      await fetch(GAS_ENDPOINT, { method: 'POST', body: JSON.stringify(record) });
+      Swal.close();
+      Swal.fire('✅ บันทึกสำเร็จ', '', 'success').then(() => liff.closeWindow());
+    }
+  });
+}
+
+// ให้ฟังก์ชันเปิดกล้อง/ค้นหาเบอร์ใช้ใน HTML ได้
+window.startCamera = startCamera;
+window.toggleCamera = toggleCamera;
+window.manualSearch = manualSearch;
