--- a/info_ad/main_admin/scan/index.html
+++ b/info_ad/main_admin/scan/index.html
@@ -19,7 +19,7 @@
   <div id="reader" style="width: 300px;"></div>
   <p style="color:gray;">กรุณาเล็งกล้องไปยัง QR Code ลูกค้า</p>
   <button onclick="startCamera()">เปิดกล้อง</button>
-  <button onclick="toggleCamera()">🔁 สลับกล้อง</button>
+  <button onclick="scanner.toggleCamera()">🔁 สลับกล้อง</button>
   <hr />
   <div>
     <label>หรือกรอกเบอร์โทรลูกค้า:</label><br />
