--- a/info_ad/main_admin/index.html
+++ b/info_ad/main_admin/index.html
@@ -13,11 +13,11 @@
 </head>
 <body style="display:none;">
   <div class="container">
-    <h2>🛠 แผงควบคุมผู้ดูแลระบบ</h2>
+    <h2>🛠 แผงควบคุมผู้ดูและระบบ</h2>
     <div class="profile">
       <p>👤 คุณ: <span id="adminName">-</span></p>
       <p>🛡️ ระดับ: <span id="adminLevel">-</span></p>
-      <p>📛 บทบาท: <span id="adminRole">-</span></p>
+      <p>💼 บทบาท: <span id="adminRole">-</span></p>
     </div>
 
     <div class="admin-buttons">
