--- a/info_ad/main_admin/index.html
+++ b/info_ad/main_admin/index.html
@@ -10,6 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://unpkg.com/html5-qrcode" defer></script>
   <script src="script.js" defer></script>
+  <script type="module">
 </head>
 <body style="display:none;">
   <div class="container">
