--- a/info_ad/main_admin/index.html
+++ b/info_ad/main_admin/index.html
@@ -35,9 +35,9 @@
     <div id="reader" style="width: 100%; max-width: 320px; margin: auto;"></div>
     <input type="tel" id="manualPhone" class="swal2-input" placeholder="หรือกรอกเบอร์โทร" />
     <div style="margin-top: 10px;">
-      <button class="btn" onclick="scanner.manualSearch()">🔍 ค้นหา</button>
-      <button class="btn" onclick="scanner.toggleCamera()">🔁 สลับกล้อง</button>
-      <button class="btn danger" onclick="scanner.closePopup()">❌ ปิด</button>
+      <button class="btn" id="scannerSearchBtn">🔍 ค้นหา</button>
+      <button class="btn" id="scannerSwitchBtn">🔁 สลับกล้อง</button>
+      <button class="btn danger" id="scannerCloseBtn">❌ ปิด</button>
     </div>
   </div>
 
