--- a/info_ad/main_admin/index.html
+++ b/info_ad/main_admin/index.html
@@ -41,7 +41,7 @@
     </div>
   </div>
 
-  <script src="scan_script.js" defer></script>
+  <script type="module" src="scan_script.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       document.getElementById('scanBtn')?.addEventListener('click', async () => {
