--- a/info_ad/main_admin/index.html
+++ b/info_ad/main_admin/index.html
@@ -26,7 +26,7 @@
       <a class="btn hidden" data-menu="stats" href="stats/index.html">📊 รายงาน</a>
       <a class="btn hidden" data-menu="settings" href="settings/index.html">⚙️ ตั้งค่า</a>
     </div>
-    <<button class="btn danger" type="button" onclick="logout()">🚪 ออกจากระบบ</button>
+    <button class="btn danger" type="button" onclick="logout()">🚪 ออกจากระบบ</button>
   </div>
 
   <!-- ✅ Scan Popup Section -->
