--- a/info_ad/main_admin/index.html
+++ b/info_ad/main_admin/index.html
@@ -20,10 +20,10 @@
     </div>
 
     <div class="admin-buttons">
-      <a class="btn hidden" data-menu="feedback" href="feedback/index.html">💬 ข้อเสนอแนะ</a>
+<!--      <a class="btn hidden" data-menu="feedback" href="feedback/index.html">💬 ข้อเสนอแนะ</a> -->
       <button class="btn hidden" id="scanBtn">🔍 สแกน QR</button>
-      <a class="btn hidden" data-menu="stats" href="stats/index.html">📊 รายงาน</a>
-      <a class="btn hidden" data-menu="settings" href="settings/index.html">⚙️ ตั้งค่า</a>
+<!--      <a class="btn hidden" data-menu="stats" href="stats/index.html">📊 รายงาน</a> -->
+<!--      <a class="btn hidden" data-menu="settings" href="settings/index.html">⚙️ ตั้งค่า</a> -->
     </div>
     <button class="btn danger" type="button" onclick="logout()">🚪 ออกจากระบบ</button>
   </div>
