--- a/member/index.html
+++ b/member/index.html
@@ -19,7 +19,7 @@
   <div class="container">
     <h2>ข้อมูลสมาชิก</h2>
 
-    <div id="memberInfo" class="card"></div>
+    <div id="memberInfo" class="card-list"></div>
 
     <!-- แถบกดดูประวัติ -->
     <button class="btn history-toggle" id="toggleHistory">▼ ดูประวัติการใช้บริการ</button>
